generator client {
  provider = "prisma-client-js"
  // output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}

model Cinema {
  id         String   @id @default(uuid())
  name       String
  address    String
  city       String
  postalCode String
  rooms      Room[]
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@map("cinemas")
}

model Room {
  id        String    @id @default(uuid())
  name      String
  cinemaId  String
  cinema    Cinema    @relation(fields: [cinemaId], references: [id], onDelete: Cascade)
  seats     Seat[]
  sessions  Session[]
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt

  @@map("rooms")
}

model Seat {
  id              String           @id @default(uuid())
  row             String
  number          Int
  roomId          String
  room            Room             @relation(fields: [roomId], references: [id], onDelete: Cascade)
  seatOccupations SeatOccupation[]
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt

  @@unique([roomId, row, number])
  @@map("seats")
}

model Session {
  id              String           @id @default(uuid())
  filmId          String
  roomId          String
  startTime       DateTime         @db.Timestamptz
  endTime         DateTime         @db.Timestamptz
  room            Room             @relation(fields: [roomId], references: [id], onDelete: Cascade)
  seatOccupations SeatOccupation[]
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt

  @@map("sessions")
}

enum OccupationStatus {
  FREE
  OCCUPIED
}

model SeatOccupation {
  sessionId String
  seatId    String
  userId    String?
  status    OccupationStatus @default(FREE)
  session   Session          @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  seat      Seat             @relation(fields: [seatId], references: [id], onDelete: Cascade)
  createdAt DateTime         @default(now())
  updatedAt DateTime         @updatedAt

  @@id([sessionId, seatId])
  @@index([sessionId])
  @@map("seat_occupations")
}
